--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,12 @@
-html,
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
+  background: black;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+  font-family: SF Pro Display, SFPro Icons, Helvetica Neue, sans-serif;
+  line-height: 1.1;
+  letter-spacing: 0em;
 }
